<resources>
    <string name="app_name">Photogram</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload">upload</string>
    <string name="image_preview">preview</string>
    <string name="image_name">Provide a name for your image</string>
    <string name="log_in">LOG IN</string>
    <string name="share">Share</string>
    <string name="log_out">LOG OUT</string>
    <string name="initial_like">0</string>
    <string name="setting">setting</string>
    <string name="white">White</string>
    <string name="purple">Purple</string>
    <string name="change_background_color">Change Background Color</string>
</resources>