<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UploadFragment">

    <ImageView
        android:id="@+id/image_preview"
        android:layout_width="match_parent"
        android:layout_height="408dp"
        android:background="@drawable/ic_baseline_image_100"
        android:contentDescription="@string/image_preview" />

    <EditText
        android:id="@+id/image_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/image_name"
        android:background="#FFFFFF"
        android:textSize="20sp" />
    
    <Button
        android:id="@+id/upload_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload" />





</LinearLayout>