<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".SettingFragment"
    android:layout_margin="6dp">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/white" />
    <TextView
        android:id="@+id/change_background_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_background_color"
        android:layout_centerInParent="true"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:layout_alignParentEnd="true"
        android:layout_alignEnd="@+id/change_background_text"
        android:text="@string/purple"/>
</RelativeLayout>